--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -1,3 +1,18 @@
+.md-chip {
+  display: inline-block;
+  padding: 0 12px;
+  border-radius: 32px;
+  font-size: 11px;
+  height: 22px;
+  line-height: 22px;
+  background: #e0e0e0;
+}
+
+.checkbox-grid li {
+  display: block;
+  float: left;
+  margin-left: 2em;
+}
 
 .gu-mirror{position:fixed!important;margin:0!important;z-index:9999!important;opacity:.8;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";filter:alpha(opacity=80)}.gu-hide{display:none!important}.gu-unselectable{-webkit-user-select:none!important;-moz-user-select:none!important;-ms-user-select:none!important;user-select:none!important}.gu-transit{opacity:.2;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";filter:alpha(opacity=20)}
 
